--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "seraf": "./build/index.js"
+    "seraf": "build/index.js"
   },
   "scripts": {
     "start:dev": "npx nodemon",
@@ -18,9 +18,13 @@
   ],
   "author": "SerafProject",
   "license": "MIT",
-  "repository": "https://github.com/SerafaProject/seraf",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SerafaProject/seraf.git"
+  },
   "homepage": "https://github.com/SerafaProject/seraf/readme",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
     "@types/node": "^20.11.24",
     "@types/prompts": "^2.4.9",
@@ -30,8 +34,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "commander": "^12.0.0",
     "figlet": "^1.7.0",
     "path": "^0.12.7",
     "prompts": "^2.4.2"
+  },
+  "bugs": {
+    "url": "https://github.com/SerafaProject/seraf/issues"
   }
 }
