--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "commander": "^12.0.0",
+    "commander": "^12.1.0",
     "figlet": "^1.7.0",
+    "openai": "^4.77.0",
     "path": "^0.12.7",
-    "prompts": "^2.4.2"
+    "prettier": "^3.4.2",
+    "prompts": "^2.4.2",
+    "ts-morph": "^24.0.0",
+    "zod": "^3.24.1"
   },
   "bugs": {
     "url": "https://github.com/SerafaProject/seraf/issues"
